fix: minor spacing tweaks, add hover style to excerpt titles

--- a/src/css/_02-elements.scss
+++ b/src/css/_02-elements.scss
@@ -38,7 +38,8 @@ body strong {
 	}
 }
 
-.site-branding {
+.site-branding,
+.page-title {
 	font-family: Arial, sans-serif;
 
 	.wf-active & {
